# ifce

gestao_empresarial/: startup.md
instrumentacao/atividades/: atividade1.md  atividade_3.md
instrumentacao/aulas/: aula_051121.md  aula_061121.md  aula_281021.md  aula_291021.md  revisao_1.md
instrumentacao/trabalhos/: atividade_5.md
mct/aulas/: mct_110322.md  mct_180322.md
padroes_projeto/: adapter.cc  builder.cc  factory.cc  object_pool.cc  private_class_data.cc  singleton.cc
pesquisa_e_ordenacao/: ordena.c  ordena.h
projeto_social/: aula_090322.md  aula_160322.md  aula_200322.md
redes/aulas/: aula_061221.md  aula_091121.md  aula_181021.md  aula_221121.md  aula_291121.md
redes/provas/: resumo_prova.md
semb2/posture_watcher/: Makefile
sistemas_operacionais/memory_swap_algorithms/: images.qrc  memory_swap_algorithms.pro
sistemas_operacionais/memory_swap_algorithms/lib/: CMakeLists.txt  tags
sistemas_operacionais/memory_swap_algorithms/lib/include/: algorithm.h  execution_listener.h  fifo.h  mru.h  nur.h  optimal.h  runner.h  second_chance.h  thread_pool.h  types.h
sistemas_operacionais/memory_swap_algorithms/lib/src/: fifo.cc  mru.cc  nur.cc  optimal.cc  runner.cc  second_chance.cc
sistemas_operacionais/playground/: app.cpp  bucket.cpp  bucket.h  bucket_size_dialog.cpp  bucket_size_dialog.h  bucket_size_dialog.ui  child.cpp  child.h  logger.cpp  logger.h  playground.cpp  playground.h  playground.pro  playground.qrc  playground.ui  semaphore.cpp  semaphore.h  thread_pool.h
sistemas_tempo_real/trab02/: str02.c  sync_communication.c  utils.c  (+2 more)
(+57 files in other folders)
